test_suite/tests/ui/common/diesel_derive_newtype.stderr
error: To derive DieselNewType, the feature `diesel-derive-newtype` of the crate `nutype` needs to be enabled.
 --> tests/ui/common/diesel_derive_newtype.rs:3:24
  |
3 | #[nutype(derive(Debug, DieselNewType))]
  |                        ^^^^^^^^^^^^^
