test_suite/tests/ui/common/diesel_derive_newtype.rs
use nutype::nutype;

#[nutype(derive(Debug, DieselNewType))]
pub struct DieselNewTypeString(String);

fn main() {}
